fix some layout issues on mobile

--- a/src/scss/mobile.scss
+++ b/src/scss/mobile.scss
@@ -7,6 +7,7 @@
     }
     .site-header-col {
       flex-basis: 50%;
+      padding: 0;
     }
     .header-logo img {
         height: 1.5rem;
@@ -25,9 +26,12 @@
       border-radius: 0;
       line-height: 1;
       padding: .75rem;
-      svg {
+      .svg-inline--fa {
         height: 1.25rem;
         width: 1.25rem;
+      }
+      &.btn-avatar {
+        padding: 0.375rem;
       }
     }
   }
